force-app/main/default/objects/Product_Subscriber__c/Product_Subscriber__c.object-meta.xml
<CustomObject>
    <label>Product Subscriber</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Product Subscriber Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Subscribers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>