force-app/main/default/objects/Product_Subscriber__c/fields/Expiration_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Expiration_DateTime__c</fullName>
    <label>Expiration DateTime</label>
    <type>DateTime</type>
</CustomField>