force-app/main/default/objects/Product_Subscriber__c/fields/Installed_Product__c.field-meta.xml
<CustomField>
    <fullName>Installed_Product__c</fullName>
    <label>Installed Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>