force-app/main/default/objects/Product_Subscriber__c/fields/Is_Trial__c.field-meta.xml
<CustomField>
    <fullName>Is_Trial__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Trial</label>
    <type>Checkbox</type>
</CustomField>