force-app/main/default/objects/Product_Subscriber__c/fields/Last_Upgrade_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Upgrade_Date__c</fullName>
    <label>Last Upgrade Date</label>
    <type>Date</type>
</CustomField>