force-app/main/default/objects/Product_Subscriber__c/fields/Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_Id__c</fullName>
    <label>Organization Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>