force-app/main/default/objects/Product_Subscriber__c/fields/Org_Name__c.field-meta.xml
<CustomField>
    <fullName>Org_Name__c</fullName>
    <label>Organization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>