force-app/main/default/objects/Product_Subscriber__c/fields/Org_Type__c.field-meta.xml
<CustomField>
    <fullName>Org_Type__c</fullName>
    <label>Organization Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>