force-app/main/default/objects/Product_Subscriber__c/fields/Price_after_Discount__c.field-meta.xml
<CustomField>
    <fullName>Price_after_Discount__c</fullName>
    <formula>Price__c   * (1 - ( Discount__c / 100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price after Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>