force-app/main/default/objects/Product_Subscriber__c/fields/Product_Plan__c.field-meta.xml
<CustomField>
    <fullName>Product_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Plan</label>
    <referenceTo>Product_Plan__c</referenceTo>
    <relationshipLabel>Product Subscribers</relationshipLabel>
    <relationshipName>Product_Subscribers</relationshipName>
    <type>Lookup</type>
</CustomField>