force-app/main/default/objects/Product_Subscriber__c/fields/Product_Version__c.field-meta.xml
<CustomField>
    <fullName>Product_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Version</label>
    <referenceTo>Product_Version__c</referenceTo>
    <relationshipLabel>Product Subscribers</relationshipLabel>
    <relationshipName>Product_Subscribers</relationshipName>
    <type>Lookup</type>
</CustomField>