force-app/main/default/objects/Product_Subscriber__c/fields/TimeZoneSidKey__c.field-meta.xml
<CustomField>
    <fullName>TimeZoneSidKey__c</fullName>
    <label>TimeZoneSidKey</label>
    <length>50</length>
    <type>Text</type>
</CustomField>