force-app/main/default/objects/Product_Subscriber__c/fields/Version_Number_Text__c.field-meta.xml
<CustomField>
    <fullName>Version_Number_Text__c</fullName>
    <label>Version Number (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>