force-app/main/default/objects/Product_Subscriber__c/listViews/WBConnect_Subscribers.listView-meta.xml
<ListView>
    <fullName>WBConnect_Subscribers</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Org_Name__c</columns>
    <columns>Lead__c</columns>
    <columns>Environment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Installed_Product__c</field>
        <operation>equals</operation>
        <value>WBConnect</value>
    </filters>
    <label>WBConnect Subscribers</label>
</ListView>